--- a/pages/MainPage.module.scss
+++ b/pages/MainPage.module.scss
@@ -1,3 +1,9 @@
 .container {
   width: 100%;
+
+  .banner {
+    background-image: url('./../assets/banner.png');
+    width: 100%;
+    height: 850px;
+  }
 }
