--- a/pages/MainPage.module.scss
+++ b/pages/MainPage.module.scss
@@ -1,9 +1,25 @@
+@import './../styles/_variables.scss';
+
 .container {
   width: 100%;
 
   .banner {
+    @include background-style;
     background-image: url('./../assets/banner.png');
     width: 100%;
     height: 850px;
+  }
+
+  .privilege {
+    width: 100%;
+    background-color: $color-light;
+    height: 405px;
+    display: flex;
+    align-items: center;
+  }
+
+  .privilege > :first-child {
+    margin-top: 40px;
+    margin-right: 94px;
   }
 }
