feat: select and dropdown functionality

--- a/components/features/Filters/Filters.module.scss
+++ b/components/features/Filters/Filters.module.scss
@@ -5,6 +5,7 @@
   align-items: center;
   max-width: 915px;
   justify-content: space-between;
+  margin-bottom: 45px;
 
   .btnApply {
     padding: 18px 32px;
