--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,6 +2,8 @@
 $color-dark-blue: #002b45;
 $color-white: #fff;
 $color-grey: #e1e1e1;
+$color-border: #d9d9d9;
+$color-grey-dark: #7c7c7c;
 $color-light: #fbf6ef;
 $color-dark: #001623;
 
