--- a/pages/MainPage.module.scss
+++ b/pages/MainPage.module.scss
@@ -43,5 +43,20 @@
     position: absolute;
     right: 0;
     margin-top: -246px;
+
+    @media screen and (max-width: $laptop-l) {
+			width: 500px;
+      margin-top: -300px;
+		}
+
+    @media screen and (max-width: $laptop-m) {
+			width: 420px;
+      margin-top: -320px;
+		}
+
+    @media screen and (max-width: $laptop) {
+      width: 360px;
+      margin-top: -340px;
+    }
   }
 }
