--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -13,7 +13,8 @@ $mobile-l: 480px;
 $mobile: 768px;
 $desktop: 1280px;
 $laptop: 1440px;
-$laptop-l: 1700px;
+$laptop-m: 1536px;
+$laptop-l: 1600px;
 
 // mixins
 @mixin background-style {
