--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -8,10 +8,12 @@ $color-light: #fbf6ef;
 $color-dark: #001623;
 
 // extensions
-$mobile-s: 360px;
-$mobile-l: 480px;
+$mobile-xs: 534px;
 $mobile: 768px;
+$mobile-s: 1024px;
+$mobile-m: 1180px;
 $desktop: 1280px;
+$desktop-l: 1366px;
 $laptop: 1440px;
 $laptop-m: 1536px;
 $laptop-l: 1600px;
