--- a/components/features/Filters/Filters.module.scss
+++ b/components/features/Filters/Filters.module.scss
@@ -26,9 +26,23 @@
 		font-family: 'Open Sans';
     font-size: 16px;
     text-transform: uppercase;
+
+    
+    @media screen and (max-width: $mobile-s) {
+      padding: 18px 38px;
+    }
   }
 
 	.filters {
-		
+		@media screen and (max-width: $mobile-s) {
+      display: flex;
+      flex-wrap: wrap;
+    }
 	}
+
+  .btns > :first-child {
+    @media screen and (max-width: $mobile-s) {
+      margin-bottom: 10px;
+    }
+  }
 }
