--- a/components/features/Header/Header.module.scss
+++ b/components/features/Header/Header.module.scss
@@ -13,6 +13,15 @@
 		padding: 30px 100px;
 	}
 
+	@media screen and (max-width: $desktop) {
+		padding: 30px 60px;
+		justify-content: center;
+	}
+
+	@media screen and (max-width: $mobile-s) {
+		padding: 30px 40px;
+	}
+
   .logo {
     display: flex;
     align-items: center;
@@ -21,6 +30,10 @@
 
   .logo > :first-child {
     margin-right: 34px;
+
+		@media screen and (max-width: $mobile-s) {
+			margin-right: 15px;
+		}
   }
 
 	.map {
@@ -28,6 +41,11 @@
 		font-family: 'Open Sans';
 		font-weight: 400;
 		color: $color-white;
+
+		@media screen and (max-width: $mobile-m) {
+			font-size: 12px;
+			margin-left: 10px;
+		}
 	}
 
 	.map > :first-child {
@@ -42,16 +60,34 @@
 
 	.contacts > :first-child {
 		margin-right: 73px;
+
+		@media screen and (max-width: $mobile-m) {
+			margin-right: 43px;
+		}
+
+		@media screen and (max-width: $mobile-s) {
+			margin-right: 13px;
+		}
 	}
 
 	.media {
 		display: flex;
 		align-items: center;
 		cursor: pointer;
+
+		@media screen and (max-width: $mobile-s) {
+			flex-direction: column;
+			align-items: center;
+		}
 	}
 
 	.media > :first-child {
 		margin-right: 16px;
+
+		@media screen and (max-width: $mobile-s) {
+			margin-right: 0;
+			margin-bottom: 5px;
+		}
 	}
 
 	.number {
@@ -61,5 +97,14 @@
 		font-size: 20px;
 		margin: 0 20px;
 		cursor: pointer;
+
+		@media screen and (max-width: $desktop) {
+			font-size: 18px;
+		}
+
+		@media screen and (max-width: $mobile-m) {
+			font-size: 14px;
+			margin: 0 20px;
+		}
 	}
 }
