--- a/components/features/Option/Option.module.scss
+++ b/components/features/Option/Option.module.scss
@@ -8,16 +8,26 @@
 	opacity: 0.8;
 	border-radius: 10px;
 	position: relative;
+	z-index: 1;
+
+	@media screen and (max-width: $mobile-m) {
+		padding: 16px 30px;
+	}
 
 	.text {
 		color: $color-white;
 		font-family: 'Open Sans';
 		font-size: 18px;
 		font-weight: 400; 
+
+		@media screen and (max-width: $mobile-m) {
+			font-size: 16px;
+		}
 	}
 
 	.icon {
 		position: absolute;
 		right: -15px;
+		z-index: 2;
 	}
 }
