--- a/components/features/PrivilegesMenu/Privilege/Privilege.module.scss
+++ b/components/features/PrivilegesMenu/Privilege/Privilege.module.scss
@@ -4,6 +4,10 @@
   display: flex;
   align-items: center;
 
+  @media screen and (max-width: $desktop) {
+    margin-bottom: 20px;
+  }
+
   .text {
     max-width: 270px;
     color: $color-dark-blue;
